--- a/arf1_rnaseq/conf/experiment.config
+++ b/arf1_rnaseq/conf/experiment.config
@@ -9,7 +9,8 @@ params {
     run_get_dropbox_data       = false
     run_fastqc                 = false
     run_trimmomatic            = false
-    run_rnaseq_rsem            = true
+    run_trim_galore            = true
+    run_rnaseq_rsem            = false
     run_rnaseq_salmon          = false
     run_deseq_rsem             = false
     run_deseq_rsem_report      = false
